--- a/HW2/Homework 2.ipynb
+++ b/HW2/Homework 2.ipynb
@@ -202,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_frame = pd.DataFrame(topjson['data']).head(200)\n",
@@ -231,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "r = requests.get(TOP_UNIVERSITIES + '/universities/university-cambridge')\n",
@@ -359,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_fac_stud = top_fac_stud.sort_values(['faculty/students', 'relative_rank'], ascending=[False, True])\n",
@@ -390,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "top_int_stud = top_int_stud.sort_values(['international/students', 'relative_rank'], ascending=[False, True])\n",
@@ -420,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cmap = plt.cm.get_cmap('Blues')\n",
@@ -457,7 +467,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_countries = pd.DataFrame(top_frame['country'].value_counts())\n",
@@ -476,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_regions = pd.DataFrame(top_frame['region'].value_counts())\n",
@@ -507,6 +521,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -563,7 +578,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "times_frame = pd.DataFrame(timesjson['data']).head(200) #Keep the first 200 schools\n",
@@ -601,7 +618,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "times_frame['faculty/students'] = 1/times_frame['faculty/students'].astype('float')\n",
@@ -637,7 +656,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "times_frame['region'] = times_frame.country.map(regions_by_country)\n",
@@ -647,7 +668,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Both universities are in Europe, so we input the region manually\n",
@@ -736,7 +759,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cmap = plt.cm.get_cmap('Blues')\n",
@@ -784,7 +809,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_countries = pd.DataFrame(times_frame['country'].value_counts())\n",
@@ -803,7 +830,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_regions = pd.DataFrame(times_frame['region'].value_counts())\n",
@@ -833,7 +862,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sns.barplot(y='country', x='universities', data=best_countries)\n",
@@ -908,7 +939,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "i = 0\n",
@@ -934,7 +967,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Mostly the same but the other way around.\n",
@@ -999,7 +1034,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#This set gives us the set of countries for which both frames have unmatched universities\n",
@@ -1034,7 +1071,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Belgium\"\u001d",
@@ -1051,7 +1090,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Canada\"\u001d",
@@ -1068,7 +1109,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"France\"\u001d",
@@ -1085,7 +1128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Germany\"\u001d",
@@ -1102,7 +1147,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Hong Kong\"\u001d",
@@ -1119,7 +1166,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"South Korea\"\u001d",
@@ -1136,7 +1185,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Spain\"\u001d",
@@ -1153,7 +1204,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"Sweden\"\u001d",
@@ -1170,7 +1223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print_universities(\"United Kingdom\"\u001d",
@@ -1212,7 +1267,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(university_name)"
@@ -1244,7 +1301,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "times_frame['join_here'] = times_frame.name.map(university_name)\n",
@@ -1254,7 +1313,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#quick renaming for more convenient reading later\n",
@@ -1301,6 +1362,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1321,6 +1383,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1353,8 +1416,7 @@
     "- The ratios are also strongly correlated but the fact that they are not equal to 1 signals discrepancies between both rankings (the provided numbers are clearly different)\n",
     "\n",
     "\n",
-    "##fix this\n",
-    "When looking more closely, we can find even more insights on each ranking alone :\n",
+    "When looking more closely, we can find even more insights on the individual correlation of rankings :\n",
     "- The correlation between the TopUniversities ranking and both ratios is a lot smaller when looking at the universities present in both ranking.  \n",
     "- On the other hand, the Times Higher Education ranking is a lot more correlated to its ratios.\n",
     "\n",
@@ -1365,6 +1427,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1385,7 +1448,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Keep only bottom triangle\n",
@@ -1429,7 +1494,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_uni = merged_frame[['aliases', 'times rank', 'topunis rank']]"
@@ -1462,7 +1529,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_uni['rank_mean'] = calc_mean(best_uni.loc[:,'times rank'], best_uni.loc[:,'topunis rank'])\n",
@@ -1498,7 +1567,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_uni = best_uni[['aliases', 'times rank', 'rank_mean', 'topunis rank']]\n",
@@ -1518,7 +1589,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "best_uni = best_uni[['aliases', 'times rank', 'rank_mean', 'topunis rank']]\n",
@@ -1545,7 +1618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
