--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -24,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Importing libraries\n",
@@ -38,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "folium.__version__ == '0.5.0' # just checking if we have all the right one installed"
@@ -79,6 +83,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we need several things to be contained in our data, as this is a question that contains several points. First, we need to see each canton individually, but also to have some statistics of people who alreay have a job but search for another one. \n",
+    "\n",
+    "First, on amstat, we will go to the category \"Chômeurs\" and then look at the details. Then, we will choose \"Taux de chômage\". We will also choose to look at the whole year in review, so all of 2017, so that we can maybe do a few comapraisons. Thus we choose \"À partir du janvier de l'année sous revue\". \n",
+    "\n",
+    "We will also choose three indicators: \"Chômeurs inscrits\", \"Chômeurs jeunes\" and \"Chômeurs de longue durée\" to see all the types of unemployed people. We also take both \"Demandeur d'emploi\" and \"Demandeur d'emploi non chômeur\" as to know who is or isn't really unemployed.\n",
+    "\n",
+    "Next, for the geography part, we select all three (Language, region and canton), mainly so that we can maybe use this dataset later for the Röstigraen question.\n",
+    "\n",
+    "Lastly, we also select the option \"Classes d'âge 15-24, 25-49, 50 ans et plus\" as we will be able to use it to see the different categories of unemplyed people and use it in the last part of the question."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -92,6 +111,15 @@
    "metadata": {},
    "source": [
     "### Differences in unemployment between foreigners and natives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here again, we have two different questions: one about the difference in employment regarding nationality, and the second regarding age. Seeing as we already have the information regarding age in the first dataset, we do not need to find another one. Regarding nationality, we proceed similarly as above.\n",
+    "\n",
+    "Thus, we choose exactly the same information as before but at the last option, we choose \"Nationalité\" instead of the age classes."
    ]
   },
   {
