--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -18,30 +18,35 @@
    "outputs": [],
    "source": [
     "# Used to look for the saved data sheets\n",
-    "DATA_FOLDER = 'Data/' #still need to create this"
+    "DATA_FOLDER = 'Data/'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Importing libraries\n",
     "import os\n",
-    "import pandas as pd\n",
     "import json\n",
-    "import seaborn as sns #might not be useful\n",
-    "import folium"
+    "import folium\n",
+    "import pandas as pd\n",
+    "import seaborn as sns #might not be useful"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "folium.__version__ == '0.5.0' # just checking if we have all the right one installed"
+    "#Verifying we have the right version\n",
+    "folium.__version__ == '0.5.0'"
    ]
   },
   {
@@ -121,8 +126,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
