Adding images at right place

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -25,9 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Importing libraries\n",
@@ -36,15 +34,13 @@
     "import json\n",
     "import seaborn as sns #might not be useful\n",
     "import folium\n",
-    "from IPython.display import Image"
+    "from IPython.display import Image #permits to show images"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "folium.__version__ == '0.5.0' # just checking if we have all the right one installed"
@@ -69,10 +65,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'euro01.png')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "We also had the option to download the data in several different types of files, like HTML, CSV, TSV or XLS. We choose to download the data in a XLS format."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'euro02.png')"
    ]
   },
   {
@@ -97,13 +111,100 @@
    "source": [
     "Here, we need several things to be contained in our data, as this is a question that contains several points. First, we need to see each canton individually, but also have some statistics of people who alreay have a job but search for another one. \n",
     "\n",
-    "First, on amstat, we go to the category \"Chômeurs\" and then look at the details. Then, we choose \"Taux de chômage\". We also choose to look at the whole year in review, which means all of 2017, so that we can maybe do a few comparaisons. Thus we choose \"À partir du janvier de l'année sous revue\". \n",
+    "First, on amstat, we go to the category \"Chômeurs\" and then look at the details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'amstat01.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, we choose \"Taux de chômage\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'amstat02.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " We also choose to look at the whole year in review, which means all of 2017, so that we can maybe do a few comparaisons. Thus we choose \"À partir du janvier de l'année sous revue\". \n",
     "\n",
-    "We also select three indicators: \"Chômeurs inscrits\", \"Chômeurs jeunes\" and \"Chômeurs de longue durée\" to see all the types of unemployed people. We take both \"Demandeur d'emploi\" and \"Demandeur d'emploi non chômeur\" as to know who is or isn't really unemployed.\n",
+    "We also select three indicators: \"Chômeurs inscrits\", \"Chômeurs jeunes\" and \"Chômeurs de longue durée\" to see all the types of unemployed people."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'amstat03.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We take both \"Demandeur d'emploi\" and \"Demandeur d'emploi non chômeur\" as to know who is or isn't really unemployed.\n",
     "\n",
-    "Next, for the geography part, we select all three (Language, region and canton), mainly so that we can maybe use this dataset later for the Röstigraben question.\n",
-    "\n",
+    "Next, for the geography part, we select all three (Language, region and canton), mainly so that we can maybe use this dataset later for the Röstigraben question."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'amstat04.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Lastly, we also select the option \"Classes d'âge 15-24, 25-49, 50 ans et plus\" as we will be able to use it to see the different categories of unemplyed people and use it in the last part of the question."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'amstat05.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can select what type of file we want the file in. We chose the XLS file as \"Excel avec texte clair\" as the other XLS files didn't seem appropriate to us, because of a few problems with the colapsing of rows (for the regions)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'amstat07.png')"
    ]
   },
   {
@@ -129,6 +230,15 @@
     "Here we have two different questions again: one about the difference in employment regarding nationality, and the second regarding age. Seeing as we already have the information regarding age in the first dataset, we do not need to find another one. Regarding nationality, we proceed similarly as above.\n",
     "\n",
     "Thus, we choose exactly the same information as before but at the last option, we select \"Nationalité\" instead of the age classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'amstat06.png')"
    ]
   },
   {
