--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -18,8 +18,22 @@
    "outputs": [],
    "source": [
     "# Used to look for the saved data sheets\n",
-    "DATA_FOLDER = 'Data/'\n",
-    "IMAGE_FOLDER = 'Data/Images/'"
+    "IMAGE_FOLDER = 'Data/Images/'\n",
+    "DATA_EUROPE = 'Data/une_rt_a.xls'\n",
+    "DATA_SWITZERLAND_BY_AGE = 'Data/chomage_age.xlsx'\n",
+    "DATA_SWITZERLAND_BY_NATIONALITY = 'Data/2_1 Taux de chômage.xlsx'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "swiss_geo_path = r'ch-cantons.topojson.json'\n",
+    "europe_geo_path = r'europe.topojson.json'"
    ]
   },
   {
@@ -41,9 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Verifying we have the right version\n",
@@ -230,11 +242,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "swiss_unemployed = pd.read_excel(DATA_SWITZERLAND_BY_AGE, header=[2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_unemployed.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -255,9 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat06.png')"
@@ -266,11 +285,57 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "swiss_foreign_unemployed = pd.read_excel(DATA_SWITZERLAND_BY_NATIONALITY, header=[0,1], index_col=None) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del swiss_foreign_unemployed['Mois'] #remove empty line\n",
+    "del swiss_foreign_unemployed['Total'] #only interessted in september"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " swiss_foreign_unemployed.dropna(inplace=True) #final 'total' column is NA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_foreign_unemployed.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_map_data_2 = swiss_foreign_unemployed[['Canton', 'Nationalité', 'Septembre 2017']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swiss_map_data_2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -292,7 +357,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -306,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
