We should import cleaner data

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -39,14 +39,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Importing libraries\n",
     "import os\n",
     "import json\n",
+    "import pandas as pd\n",
     "import seaborn as sns #might not be useful\n",
     "import folium\n",
     "from IPython.display import Image #permits to show images"
@@ -112,11 +111,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "europe_unemployed = pd.read_excel(DATA_EUROPE, header=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "europe_unemployed.head()"
+   ]
   },
   {
    "cell_type": "markdown",
