Adding some data processing

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -39,7 +39,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Importing libraries\n",
@@ -84,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'euro01.png')"
@@ -111,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "europe_unemployed = pd.read_excel(DATA_EUROPE, header=10)"
@@ -250,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "swiss_unemployed = pd.read_excel(DATA_SWITZERLAND_BY_AGE, header=[2,3])"
@@ -284,10 +292,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat06.png')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To start off, we import the data set downloaded previously and clean it as necessary.\n",
+    "In our case, we need to flatten some of the structure."
    ]
   },
   {
@@ -296,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "swiss_foreign_unemployed = pd.read_excel(DATA_SWITZERLAND_BY_NATIONALITY, header=[0,1], index_col=None) "
+    "swiss_foreign_unemployed = pd.read_excel(DATA_SWITZERLAND_BY_NATIONALITY, header=[0,1]) "
    ]
   },
   {
@@ -315,7 +333,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " swiss_foreign_unemployed.dropna(inplace=True) #final 'total' column is NA"
+    "swiss_foreign_unemployed.dropna(inplace=True) #final 'total' column is NA\n",
+    "swiss_foreign_unemployed.reset_index(inplace=True) #add index"
    ]
   },
   {
@@ -324,6 +343,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "swiss_foreign_unemployed.rename(columns={'index':'Région linguistique'}, inplace=True)\n",
+    "swiss_foreign_unemployed.columns.name = None #we don't want a super column\n",
     "swiss_foreign_unemployed.head()"
    ]
   },
@@ -333,7 +354,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "swiss_map_data_2 = swiss_foreign_unemployed[['Canton', 'Nationalité', 'Septembre 2017']]"
+    "swiss_foreign_unemployed.columns = swiss_foreign_unemployed.columns.droplevel(1)"
    ]
   },
   {
@@ -342,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "swiss_map_data_2"
+    "swiss_foreign_unemployed.iloc[:,0:4]"
    ]
   },
   {
