Added new data to notebook

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -20,8 +20,9 @@
     "# Used to look for the saved data sheets\n",
     "IMAGE_FOLDER = 'Data/Images/'\n",
     "DATA_EUROPE = 'Data/une_rt_a.xls'\n",
+    "DATA_SWITZERLAND = 'Data/chomage.xlsx'\n",
     "DATA_SWITZERLAND_BY_AGE = 'Data/chomage_age.xlsx'\n",
-    "DATA_SWITZERLAND_BY_NATIONALITY = 'Data/2_1 Taux de chômage.xlsx'"
+    "DATA_SWITZERLAND_BY_NATIONALITY = 'Data/chomage_nationalite.xlsx'"
    ]
   },
   {
@@ -88,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'euro01.png')"
@@ -177,9 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " We also choose to look at the whole year in review, which means all of 2017, so that we can maybe do a few comparaisons. Thus we choose \"À partir du janvier de l'année sous revue\". \n",
-    "\n",
-    "We also select three indicators: \"Chômeurs inscrits\", \"Chômeurs jeunes\" and \"Chômeurs de longue durée\" to see all the types of unemployed people."
+    "We want to only see the current month, thus we selected \"Mois sous revue\" to only see the latest statistics, even if it might have a few inconsistencies comapred to the whole year. This is because, in one of the questions, we are asked about the current month and not a whole year."
    ]
   },
   {
@@ -197,7 +194,7 @@
    "source": [
     "We take both \"Demandeur d'emploi\" and \"Demandeur d'emploi non chômeur\" as to know who is or isn't really unemployed.\n",
     "\n",
-    "Next, for the geography part, we select all three (Language, region and canton), mainly so that we can maybe use this dataset later for the Röstigraben question."
+    "Next, for the geography part, we select all two of them (Language region and canton), mainly so that we can maybe use this dataset later for the Röstigraben question."
    ]
   },
   {
@@ -207,22 +204,6 @@
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat04.png')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lastly, we also select the option \"Classes d'âge 15-24, 25-49, 50 ans et plus\" as we will be able to use it to see the different categories of unemplyed people and use it in the last part of the question."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Image(IMAGE_FOLDER + 'amstat05.png')"
    ]
   },
   {
@@ -244,18 +225,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "swiss_unemployed = pd.read_excel(DATA_SWITZERLAND_BY_AGE, header=[2,3])"
+    "swiss_unemployed = pd.read_excel(DATA_SWITZERLAND, header=[2,3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "swiss_unemployed.head()"
@@ -272,17 +253,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we have two different questions again: one about the difference in employment regarding nationality, and the second regarding age. Seeing as we already have the information regarding age in the first dataset, we do not need to find another one. Regarding nationality, we proceed similarly as above.\n",
-    "\n",
-    "Thus, we choose exactly the same information as before but at the last option, we select \"Nationalité\" instead of the age classes."
+    "Here we have two different questions again: one about the difference in employment regarding nationality, and the second regarding age. For both, we proceed similarly as above, but select the option \"Classes d'âge 15-24, 25-49, 50 ans et plus\" for one of them and \"Nationalité\" for the other."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(IMAGE_FOLDER + 'amstat05.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat06.png')"
@@ -299,7 +285,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed = pd.read_excel(DATA_SWITZERLAND_BY_NATIONALITY, header=[0,1]) "
