--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -89,7 +89,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'euro01.png')"
@@ -105,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'euro02.png')"
@@ -150,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat01.png')"
@@ -166,7 +172,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat02.png')"
@@ -182,7 +190,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat03.png')"
@@ -200,7 +210,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat04.png')"
@@ -216,7 +228,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat07.png')"
@@ -228,15 +242,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "swiss_unemployed = pd.read_excel(DATA_SWITZERLAND, header=[2,3])"
+    "swiss_unemployed = pd.read_excel(DATA_SWITZERLAND, header=[0,1])\n",
+    "del swiss_unemployed['Mois']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "swiss_unemployed.head()"
@@ -259,7 +272,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat05.png')"
@@ -268,7 +283,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Image(IMAGE_FOLDER + 'amstat06.png')"
@@ -320,9 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed.rename(columns={'index':'Région linguistique'}, inplace=True)\n",
@@ -344,9 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed.iloc[:,0:4]"
@@ -372,7 +385,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -386,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
