Sanitize data exercise 2

--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -33,7 +33,7 @@
    },
    "outputs": [],
    "source": [
-    "swiss_geo_path = r'ch-cantons.topojson.json'\n",
+    "swiss_geo_path = r'topojson/ch-cantons.topojson.json'\n",
     "europe_geo_path = r'europe.topojson.json'"
    ]
   },
@@ -48,16 +48,19 @@
     "# Importing libraries\n",
     "import os\n",
     "import json\n",
-    "import pandas as pd\n",
-    "import seaborn as sns #might not be useful\n",
     "import folium\n",
-    "from IPython.display import Image #permits to show images"
+    "import pandas as pd\n",
+    "import pickle as pkl\n",
+    "import seaborn as sns #might not be useful\n",
+    "from IPython.display import Image #allows showing images"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#Verifying we have the right version\n",
@@ -129,7 +132,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "europe_unemployed.head()"
@@ -155,7 +160,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -173,7 +178,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -191,7 +196,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -211,7 +216,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -229,7 +234,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -239,20 +244,76 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "swiss_unemployed = pd.read_excel(DATA_SWITZERLAND, header=[0,1])\n",
-    "del swiss_unemployed['Mois']"
+    "del swiss_unemployed['Mois'] #Only NaN values\n",
+    "del swiss_unemployed['Total'] #Same as Septembre 2017 as we only choose one month"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "swiss_unemployed.head()"
+    "swiss_unemployed.columns = [c[-1] for c in swiss_unemployed.columns]\n",
+    "swiss_unemployed.reset_index(inplace=True)\n",
+    "swiss_unemployed.rename(columns={'index': 'Région linguistique', 'Unnamed: 0_level_1':'Canton'}, inplace=True)\n",
+    "swiss_unemployed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "dico = pkl.load(open('Data/map_cantons.pkl', 'rb'))\n",
+    "swiss_unemployed.loc[26, 'Canton'] = 'Suisse'\n",
+    "swiss_unemployed['Code'] = swiss_unemployed['Canton'].map(dico)\n",
+    "swiss_unemployed\u001d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "swiss_unemployed.loc[4, 'Code'] = 'SZ'\n",
+    "swiss_unemployed.loc[15, 'Code'] = 'SG'\n",
+    "swiss_unemployed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "swiss_map = folium.Map(location=[47, 8], zoom_start=7)\n",
+    "swiss_map.choropleth(geo_data=swiss_geo_path, data=swiss_unemployed,\n",
+    "             columns=['Code', 'Taux de chômage'],\n",
+    "             key_on='feature.cantons.geometries.id',\n",
+    "             topojson='objects.cantons.geometries.id',\n",
+    "             fill_color='BuPu', fill_opacity=0.7, line_opacity=0.2,\n",
+    "             legend_name='Percentage of unemployment (%)')\n",
+    "swiss_map"
    ]
   },
   {
@@ -326,18 +387,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed.dropna(inplace=True) #final 'total' column is NA\n",
-    "swiss_foreign_unemployed.reset_index(inplace=True) #add index"
+    "swiss_foreign_unemployed.reset_index(inplace=True) #add index\n",
+    "swiss_foreign_unemployed.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed.rename(columns={'index':'Région linguistique'}, inplace=True)\n",
@@ -349,7 +413,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -359,7 +423,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "swiss_foreign_unemployed.iloc[:,0:4]"
@@ -399,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
