--- a/HW3/Homework 3.ipynb
+++ b/HW3/Homework 3.ipynb
@@ -279,7 +279,7 @@
    "outputs": [],
    "source": [
     "dico = pkl.load(open('Data/map_cantons.pkl', 'rb'))\n",
-    "swiss_unemployed.loc[26, 'Canton'] = 'Suisse'\n",
+    "swiss_unemployed.drop([26], inplace=True)\n",
     "swiss_unemployed['Code'] = swiss_unemployed['Canton'].map(dico)\n",
     "swiss_unemployed\u001d"
    ]
@@ -309,8 +309,8 @@
     "swiss_map = folium.Map(location=[47, 8], zoom_start=7)\n",
     "swiss_map.choropleth(geo_data=swiss_geo_path, data=swiss_unemployed,\n",
     "             columns=['Code', 'Taux de chômage'],\n",
-    "             key_on='feature.cantons.geometries.id',\n",
-    "             topojson='objects.cantons.geometries.id',\n",
+    "             key_on='feature.id',\n",
+    "             topojson='objects.id',\n",
     "             fill_color='BuPu', fill_opacity=0.7, line_opacity=0.2,\n",
     "             legend_name='Percentage of unemployment (%)')\n",
     "swiss_map"
